--- a/css/navigationTopBar.css
+++ b/css/navigationTopBar.css
@@ -33,10 +33,10 @@ ul {
     padding: 10px 24px 10px 10px; }
     .nav > .search-container > i {
       margin-top: -3px;
-      margin-left: 300px;
+      margin-left: 285px;
       position: absolute; }
     .nav > .search-container > #motif-search {
-      margin-left: 32px;
+      margin-left: 12px;
       position: absolute;
       display: inline-block;
       width: 270px;
@@ -51,19 +51,23 @@ ul {
       color: black;
       font-size: 15px;
       font-family: sans-serif; }
-    .nav > .search-container .collection-settings #collection-settings-button {
-      position: absolute;
-      left: 0;
-      top: -4px; }
-
-.title-container {
-  text-shadow: 1px 4px 6px #dadada, 1px 1px 1px grey, 1px 4px 6px #dadada;
-  color: black;
-  padding: 10px;
-  position: absolute;
-  width: 380px;
-  left: 0;
-  top: 32px; }
+  .nav .collection-settings {
+    position: absolute;
+    top: 20px;
+    left: 204px; }
+    .nav .collection-settings #collection-settings-button {
+      position: absolute; }
+      .nav .collection-settings #collection-settings-button span {
+        vertical-align: text-top; }
+      .nav .collection-settings #collection-settings-button .material-icons {
+        font-size: 200%; }
+  .nav .title-container {
+    text-shadow: 1px 4px 6px #dadada, 1px 1px 1px grey, 1px 4px 6px #dadada;
+    color: black;
+    padding: 10px;
+    position: absolute;
+    left: 60px;
+    top: 30px; }
 
 /* Active State */
 .nav > li:hover > a {
@@ -127,6 +131,10 @@ ul {
     text-align: center;
     display: unset; }
 
+.error-tips {
+  width: 270px;
+  min-height: 26px; }
+
 /* Media for larger devices */
 @media screen and (min-width: 1100px) {
   .first-line, .second-line {
@@ -134,7 +142,7 @@ ul {
     display: inline-block !important; } }
 /* Media for devices smaller than threshold*/
 @media screen and (max-width: 780px) {
-  .interface-button span {
+  .interface-button:not(#collection-settings-button) span {
     display: none !important; }
 
   .first-line {
